increased font size, fixed overflow problem, formatted html

--- a/css/aboutUsWD.css
+++ b/css/aboutUsWD.css
@@ -6,7 +6,6 @@ body {
   margin-right: 50px;
   margin-left: 50px;
 } 
-
 h3 {
   font-family: 'Montserrat', sans-serif;
   color: rgb(115, 72, 131);
@@ -26,7 +25,7 @@ h5 {
 }
 p {
   color: rgb(115, 72, 131);
-  font-size: 16px; 
+  font-size: 25px; 
 }
 #susanimg {
   float: left;
@@ -43,7 +42,6 @@ p {
 html, body {
   margin: 0 auto;
   height: 100%;
-  overflow: hidden;
   text-align: center;
 }
 #stage {
